completed tech-indicators functionality

--- a/tableau_wdc.html
+++ b/tableau_wdc.html
@@ -155,11 +155,11 @@
                 </h2>
                 <form>
                     <div class="form-inline">
-                        <label for="symbol-list-indicators" class="text-center">Symbol List</label>
+                        <label for="symbol-list-indicators" class="text-center">Symbol List or Currency Pair</label>
                     </div>
                     <div class="form-inline">
                         <input type="text" class="form-control" id="symbol-list-indicators"
-                            placeholder="MSFT,AAPL,GOOGL">
+                            placeholder="MSFT,USDEUR,GOOGL">
                     </div>
                     <div class="form-inline">
                         <label for="technical-indicator" class="text-center">Indicator Shorthand</label>
