hopefully sector working

--- a/tableau_wdc.html
+++ b/tableau_wdc.html
@@ -201,25 +201,27 @@
                 <!-- Blank div for spacing-->
             </div>
         </div>
-        <div class="row">
+        <!-- Custom Query -->
+        <!--         <div class="row">
             <div class="col-md-12 text-center">
                 <h2>Custom API Query</h2>
                 <form>
+                    <label for="custom-query" class="text-left">Query URL</label>
                     <div class="form-inline">
                         <input type="text" class="form-control wide-input" id="custom-query"
                             placeholder="https://www.alphavantage.co/query?function=TIME_SERIES_INTRADAY&symbol=MSFT&interval=5min&outputsize=full&apikey=demo">
                     </div>
-                    <!-- <div>The start of all queries is: https://www.alphavantage.co/query?<br> Define
+                    <div>The start of all queries is: https://www.alphavantage.co/query?<br> Define
                         parameters with: parameter=value (Ex: symbol=MSFT) <br>Use ampersands between parameters
                         <br>Full example:<br>
                         https://www.alphavantage.co/query?function=TIME_SERIES_INTRADAY&symbol=MSFT&interval=5min&outputsize=full&apikey=demo
-                    </div> -->
+                    </div> 
                     <button type="button" id="query-submit-btn" class="btn btn-success" style="margin: 10px;">Get
                         Query</button>
                 </form>
                 <div id='query-output'></div>
             </div>
-        </div>
+        </div>-->
 
 
 </body>
